--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,68 +1,122 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    -webkit-animation: App-logo-float infinite 3s ease-in-out;
-            animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
+.Sidebar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-app-region: drag;
+  height: 100%;
+  width: 4.2rem;
+  background-color: #423630;
+  position: -webkit-sticky;
+  position: sticky;
+}
+
+.Sidebar img {
+  -webkit-filter: invert(70%);
+          filter: invert(70%);
+}
+
+.Sidebar img.highlight {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+}
+
+.Sidebar img:hover {
+  -webkit-filter: opacity(0.9) invert(85%);
+          filter: opacity(0.9) invert(85%);
+}
+
+.Sidebar #personal {
+  position: absolute;
+  top: 4rem;
+}
+
+.Sidebar #chat {
+  position: absolute;
+  top: 7rem;
+}
+
+.Sidebar #etc {
+  position: absolute;
+  top: 9.5rem;
+}
+
+.Sidebar #bell {
+  position: absolute;
+  bottom: 3.5rem;
+}
+
+.Sidebar #setting {
+  position: absolute;
+  bottom: 1rem;
+}
+
+body {
+  margin: 0;
+}
+
+.App {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: calc(10px + 2vmin);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  height: 100vh;
+  background-color: antiquewhite;
 }
 
-.App-link {
-  color: #704cb6;
+.ContentRoot {
+  display: block;
+  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  background-color: lightgreen;
 }
 
-@-webkit-keyframes App-logo-float {
-  0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-  50% {
-    -webkit-transform: translateY(10px);
-            transform: translateY(10px);
-  }
-  100% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
+.ContentRoot .ContentHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-app-region: drag;
+  width: 100%;
+  height: 2.8rem;
+  background-color: cadetblue;
 }
 
-@keyframes App-logo-float {
-  0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-  50% {
-    -webkit-transform: translateY(10px);
-            transform: translateY(10px);
-  }
-  100% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
+.ContentSearchBar {
+  width: 100%;
+  height: 2rem;
+  background-color: violet;
 }
 /*# sourceMappingURL=style.css.map */
