--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -61,29 +61,6 @@
   bottom: 1rem;
 }
 
-body {
-  margin: 0;
-}
-
-.App {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  height: 100vh;
-  background-color: antiquewhite;
-}
-
 .ContentRoot {
   display: block;
   height: 100%;
@@ -109,14 +86,58 @@ body {
       -ms-flex-direction: row;
           flex-direction: row;
   -webkit-app-region: drag;
-  width: 100%;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
   height: 2.8rem;
-  background-color: cadetblue;
+  background-color: white;
 }
 
-.ContentSearchBar {
+.ContentRoot .ContentHeader .TabName {
+  margin-left: 0.8rem;
+}
+
+.ContentRoot .ContentHeader #addFriend {
+  margin-right: 0.5rem;
+  -webkit-filter: invert(15%);
+          filter: invert(15%);
+}
+
+.ContentRoot .ContentHeader #addFriend:hover {
+  -webkit-filter: opacity(0.9) invert(20%);
+          filter: opacity(0.9) invert(20%);
+}
+
+.ContentRoot .ContentSearchBar {
   width: 100%;
   height: 2rem;
   background-color: violet;
+}
+
+body {
+  margin: 0;
+}
+
+.App {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  height: 100vh;
+  background-color: antiquewhite;
 }
 /*# sourceMappingURL=style.css.map */
