--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -113,9 +113,75 @@
 }
 
 .ContentRoot .ContentSearchBar {
-  width: 100%;
-  height: 2rem;
-  background-color: violet;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  height: 2.5rem;
+  background-color: white;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 90%;
+  height: 35%;
+  background-color: #f7f7f7;
+  padding: 0.25rem;
+  border-radius: 6px 6px 6px 6px;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper #search {
+  margin-left: 0.3rem;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper .SearchFriends {
+  border: none;
+  outline: none;
+  background-color: #f7f7f7;
+  margin-left: 0.3rem;
+  font-size: 0.8rem;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper .SearchFriends::-webkit-input-placeholder {
+  color: #c7c7c7;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper .SearchFriends:-ms-input-placeholder {
+  color: #c7c7c7;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper .SearchFriends::-ms-input-placeholder {
+  color: #c7c7c7;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper .SearchFriends::placeholder {
+  color: #c7c7c7;
 }
 
 body {
