search input 너비 최대로

--- a/src/styles/_friend.scss
+++ b/src/styles/_friend.scss
@@ -52,6 +52,7 @@
       .SearchFriends {
         border: none;
         outline: none;
+        flex: 1;
         background-color: $gray;
         margin-left: 0.3rem;
         font-size: 0.8rem;
