search input 좌우로 늘이면 좌우 빈공간이 너무 늘어나서 width 100%로 바꾸고 마진 추가함

--- a/src/styles/_friend.scss
+++ b/src/styles/_friend.scss
@@ -34,9 +34,11 @@
     .SearchFriendsWrapper {
       @include flexCenter(row);
       justify-content: flex-start;
-      width: 90%;
+      width: 100%;
       height: 35%;
       background-color: $gray;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
       padding: 0.25rem;
       border-radius: 6px 6px 6px 6px;
       
