--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -145,9 +145,11 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  width: 90%;
+  width: 100%;
   height: 35%;
   background-color: #f7f7f7;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   padding: 0.25rem;
   border-radius: 6px 6px 6px 6px;
 }
