--- a/src/styles/_friend.scss
+++ b/src/styles/_friend.scss
@@ -1,9 +1,15 @@
 
+@mixin textEllipse() {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .ContentRoot {
   display: block;
   height: 100%;
   flex: 1;
-  background-color: lightgreen;
 
   .ContentHeader {
     @include flexCenter(row);
@@ -12,6 +18,8 @@
     height: 2.8rem;
     background-color: $white;
     .TabName {
+      color: $black;
+      font-weight: 800;
       margin-left: 0.8rem;
     }
 
@@ -56,6 +64,62 @@
 
         &::placeholder {
           color: $dimGray;
+        }
+      }
+    }
+  }
+
+  main {
+    height: calc(100% - 5.3rem);
+    overflow-y: auto;
+    .UserItem {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;      
+      height: 3.4rem;
+      padding: 0.2rem;
+
+      .Avatar {
+        margin-left: 0.3rem;
+        height: 80%;
+        border-radius: 40%;
+      }
+
+      .Infos {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        padding: 0 0.4rem;
+
+        .LeftInfo {
+          .NickName {
+            color: $black;
+            font-weight: bold;
+            font-size: 0.8rem;
+          }
+  
+          .StatMessage {
+            font-size: 0.7rem;
+            color: $dimGray;
+          }
+        }
+        
+        .RightInfo {
+          max-width: 50%;
+          border: 0.12rem solid $melon;
+          border-radius: 1rem;
+          padding: 0.2rem; // 0.4rem;
+          
+          .Music {
+            color: $black;
+            font-size: 0.8rem;
+            @include textEllipse();
+            color: $black;
+          }
         }
       }
     }
