--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,6 @@
 $brown: rgb(66, 54, 48);
+$black: rgb(64, 64, 64);
 $white: rgb(255, 255, 255);
 $gray: rgb(247,247,247);
 $dimGray: rgb(199, 199, 199);
+$melon: rgb(154, 231, 176);
