--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,7 +15,7 @@
           flex-direction: column;
   -webkit-app-region: drag;
   height: 100%;
-  width: 4.2rem;
+  min-width: 4.2rem;
   background-color: #423630;
   position: -webkit-sticky;
   position: sticky;
@@ -67,7 +67,6 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  background-color: lightgreen;
 }
 
 .ContentRoot .ContentHeader {
@@ -94,6 +93,8 @@
 }
 
 .ContentRoot .ContentHeader .TabName {
+  color: #404040;
+  font-weight: 800;
   margin-left: 0.8rem;
 }
 
@@ -185,6 +186,82 @@
   color: #c7c7c7;
 }
 
+.ContentRoot main {
+  height: calc(100% - 5.3rem);
+  overflow-y: auto;
+}
+
+.ContentRoot main .UserItem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 3.4rem;
+  padding: 0.2rem;
+}
+
+.ContentRoot main .UserItem .Avatar {
+  margin-left: 0.3rem;
+  height: 80%;
+  border-radius: 40%;
+}
+
+.ContentRoot main .UserItem .Infos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 0.4rem;
+}
+
+.ContentRoot main .UserItem .Infos .LeftInfo .NickName {
+  color: #404040;
+  font-weight: bold;
+  font-size: 0.8rem;
+}
+
+.ContentRoot main .UserItem .Infos .LeftInfo .StatMessage {
+  font-size: 0.7rem;
+  color: #c7c7c7;
+}
+
+.ContentRoot main .UserItem .Infos .RightInfo {
+  max-width: 50%;
+  border: 0.12rem solid #9ae7b0;
+  border-radius: 1rem;
+  padding: 0.2rem;
+}
+
+.ContentRoot main .UserItem .Infos .RightInfo .Music {
+  color: #404040;
+  font-size: 0.8rem;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #404040;
+}
+
 body {
   margin: 0;
 }
@@ -204,11 +281,13 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
   height: 100vh;
-  background-color: antiquewhite;
 }
 /*# sourceMappingURL=style.css.map */
