--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,5 +2,7 @@ $brown: rgb(66, 54, 48);
 $black: rgb(64, 64, 64);
 $white: rgb(255, 255, 255);
 $gray: rgb(247,247,247);
+$dividerGray: rgb(241, 241, 241);
+$dividerTitle: rgb(154, 154, 154);
 $dimGray: rgb(199, 199, 199);
 $melon: rgb(154, 231, 176);
