--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -94,7 +94,7 @@
 
 .ContentRoot .ContentHeader .TabName {
   color: #404040;
-  font-weight: 800;
+  font-weight: 700;
   margin-left: 0.8rem;
 }
 
@@ -194,7 +194,7 @@
 .ContentRoot main .SectionTitle {
   margin-top: 0.5rem;
   margin-left: 0.5rem;
-  font-size: 0.8rem;
+  font-size: 0.75rem;
   color: #9a9a9a;
 }
 
@@ -268,7 +268,7 @@
 
 .ContentRoot main .UserItem .Infos .RightInfo .Music {
   color: #404040;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
@@ -278,6 +278,7 @@
 
 body {
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .App {
