--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,5 +4,7 @@ $white: rgb(255, 255, 255);
 $gray: rgb(247,247,247);
 $dividerGray: rgb(241, 241, 241);
 $dividerTitle: rgb(154, 154, 154);
+$birthdayPink: rgb(225, 115, 122);
 $dimGray: rgb(199, 199, 199);
 $melon: rgb(154, 231, 176);
+$yellow: rgb(250, 225, 1);
