선택한 탭 흰색으로 하이라이트 표시

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,6 +31,11 @@
           filter: invert(100%);
 }
 
+.Sidebar img.highlight:hover {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+}
+
 .Sidebar img:hover {
   -webkit-filter: opacity(0.9) invert(85%);
           filter: opacity(0.9) invert(85%);
