--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -14,6 +14,10 @@
 
     &.highlight {
       filter: invert(100%);
+
+      &:hover {
+        filter: invert(100%);
+      }
     }
 
     &:hover {
