--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -410,6 +410,129 @@
   color: #404040;
 }
 
+.ContentRoot {
+  display: block;
+  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.ContentRoot .ContentHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-app-region: drag;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 2.8rem;
+  background-color: white;
+}
+
+.ContentRoot .ContentHeader .TabName {
+  color: #404040;
+  font-weight: 700;
+  margin-left: 0.8rem;
+}
+
+.ContentRoot .ContentHeader #addChat {
+  margin-right: 0.5rem;
+}
+
+.ContentRoot .ContentHeader #addChat:hover {
+  -webkit-filter: opacity(0.8);
+          filter: opacity(0.8);
+}
+
+.ContentRoot .ContentSearchBar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  height: 2.5rem;
+  background-color: white;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  height: 35%;
+  background-color: #f7f7f7;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  padding: 0.25rem;
+  border-radius: 6px 6px 6px 6px;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper #search {
+  margin-left: 0.3rem;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper .SearchFriends {
+  border: none;
+  outline: none;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  background-color: #f7f7f7;
+  margin-left: 0.3rem;
+  font-size: 0.8rem;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper .SearchFriends::-webkit-input-placeholder {
+  color: #c7c7c7;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper .SearchFriends:-ms-input-placeholder {
+  color: #c7c7c7;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper .SearchFriends::-ms-input-placeholder {
+  color: #c7c7c7;
+}
+
+.ContentRoot .ContentSearchBar .SearchFriendsWrapper .SearchFriends::placeholder {
+  color: #c7c7c7;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
