--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -1,17 +1,17 @@
 
 
-.ContentRoot {
+.ChatContainer {
   display: block;
   height: 100%;
   flex: 1;
 
-  .ContentHeader {
+  .ChatHeader {
     @include flexCenter(row);
     @include draggable();
     justify-content: space-between;
     height: 2.8rem;
     background-color: $white;
-    .TabName {
+    .HeaderTitle {
       color: $black;
       font-weight: 700;
       margin-left: 0.8rem;
@@ -26,7 +26,7 @@
     }
   }
 
-  .ContentSearchBar {
+  .ChatSearchBar {
     @include flexCenter(row);
     height: 2.5rem;
     background-color: $white;
@@ -57,6 +57,69 @@
         &::placeholder {
           color: $dimGray;
         }
+      }
+    }
+  }
+
+  main.Chat {
+    height: calc(100% - 5.3rem);
+    overflow-y: auto;
+
+    .ChatItem {
+      display: grid;
+      align-items: center;
+      padding: 0.5rem 1rem 0.5rem 0.5rem;
+      grid-template-columns: 3rem 1fr 4.2rem;
+      height: 3.5rem;
+      
+      &:hover {
+        background-color: $gray;
+      }
+
+      .AvatarWarpper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        .Avatar {
+          height: 2.8rem;
+          border-radius: 40%;
+        }
+      }
+
+      .Left {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        padding-left: 0.8rem;
+        
+        .Title {
+          @include lineLimit(1);
+          padding-top: 0.3rem;
+          font-size: 0.8rem;
+          font-weight: 700;
+          color: $black;
+        }
+
+        .Message {
+          @include defaultFonts();
+          @include lineLimit(2);
+          margin-top: 0.2rem;
+          font-size: 0.7rem;
+          font-weight: 400;
+          color: $thickGray;
+          // overflow: hidden;
+          // text-overflow: ellipsis;
+          // display: -webkit-box;
+          // -webkit-line-clamp: 2;
+          // -webkit-box-orient: vertical;
+          
+          white-space: pre-line;
+        }
+      }
+
+      .Right {
+        background-color: lightgreen;
       }
     }
   }
