--- a/src/styles/_functions.scss
+++ b/src/styles/_functions.scss
@@ -9,3 +9,15 @@
 @mixin draggable() {
   -webkit-app-region: drag;
 }
+
+@mixin defaultFonts() {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@mixin lineLimit($numLine) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: $numLine;
+  -webkit-box-orient: vertical;
+}
