--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,5 +6,6 @@ $dividerGray: rgb(241, 241, 241);
 $dividerTitle: rgb(154, 154, 154);
 $birthdayPink: rgb(225, 115, 122);
 $dimGray: rgb(199, 199, 199);
+$thickGray: rgb(119, 119, 119);
 $melon: rgb(154, 231, 176);
 $yellow: rgb(250, 225, 1);
