--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -610,7 +610,26 @@
 }
 
 .ChatContainer main.Chat .ChatItem .Right {
-  background-color: lightgreen;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  height: 100%;
+}
+
+.ChatContainer main.Chat .ChatItem .Right .CurrentTime {
+  font-size: 0.7rem;
+  padding-top: 0.3rem;
+  color: #c7c7c7;
 }
 
 body {
