--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $gray: rgb(247,247,247);
 $dividerGray: rgb(241, 241, 241);
 $dividerTitle: rgb(154, 154, 154);
 $birthdayPink: rgb(225, 115, 122);
+$badgeRed: rgb(253, 91, 73);
 $dimGray: rgb(199, 199, 199);
 $thickGray: rgb(119, 119, 119);
 $melon: rgb(154, 231, 176);
