친구탭, 채팅탭, 기타탭을 friend, chat 이런식으로 되있던것들 전부 friendTab, chatTab 으로 이름 변경. chatList -> chatRoomList

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -1,11 +1,11 @@
 
 
-.ChatContainer {
+.ChatTabContainer {
   display: block;
   height: 100%;
   flex: 1;
 
-  .ChatHeader {
+  .ChatTabHeader {
     @include flexCenter(row);
     @include draggable();
     justify-content: space-between;
@@ -63,7 +63,7 @@
     height: calc(100% - 5.3rem);
     overflow-y: auto;
 
-    .ChatItem {
+    .ChatRoomItem {
       display: grid;
       align-items: center;
       padding: 0.5rem 1rem 0.5rem 0.5rem;
