--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -643,6 +643,207 @@
   font-weight: 500;
 }
 
+.MoreTabContainer {
+  display: block;
+  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.MoreTabContainer .MoreTabHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-app-region: drag;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 2.8rem;
+}
+
+.MoreTabContainer .MoreTabHeader .HeaderTitle {
+  color: #404040;
+  font-weight: 700;
+  margin-left: 0.8rem;
+}
+
+.MoreTabContainer main {
+  height: calc(100% - 3.8rem);
+}
+
+.MoreTabContainer main .Wallet {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 2.3rem;
+      grid-template-rows: 1fr 2.3rem;
+  margin: 0.8rem;
+  height: 7rem;
+  background-color: #fafafa;
+  border: 0.1rem solid #f1f1f1;
+  border-radius: 0.4rem;
+}
+
+.MoreTabContainer main .Wallet .Top {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 2.4rem;
+      grid-template-columns: 1fr 2.4rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+}
+
+.MoreTabContainer main .Wallet .Top .Left .Name {
+  color: #404040;
+}
+
+.MoreTabContainer main .Wallet .Top .Left .Email {
+  padding-top: 0.2rem;
+  color: #777777;
+  font-size: 0.7rem;
+}
+
+.MoreTabContainer main .Wallet .Top .ProtectIcon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+
+.MoreTabContainer main .Wallet .Subscription {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: 1fr 2rem;
+      grid-template-columns: 1fr 2rem;
+  border-top: 0.1rem solid #f1f1f1;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+}
+
+.MoreTabContainer main .Wallet .Subscription:hover {
+  background-color: #f7f7f7;
+}
+
+.MoreTabContainer main .Wallet .Subscription .Text {
+  font-size: 0.8rem;
+}
+
+.MoreTabContainer main .Wallet .Subscription .BTIcon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+}
+
+.MoreTabContainer main .Wallet .Subscription .BTIcon img {
+  display: block;
+  height: 50%;
+}
+
+.MoreTabContainer .Icons {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-auto-rows: 3.3rem;
+  gap: 1rem;
+  margin: 2rem 1rem;
+}
+
+.MoreTabContainer .Icons .Icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.MoreTabContainer .Icons .Icon img {
+  width: 2rem;
+}
+
+.MoreTabContainer .Icons .Icon .Text {
+  font-size: 0.75rem;
+  color: #9a9a9a;
+}
+
+.MoreTabContainer .Divider {
+  height: 0.1rem;
+  margin: 3rem 1rem 1rem;
+  border-top: 1px solid #f1f1f1;
+}
+
+.MoreTabContainer .VersionInfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 1rem;
+}
+
+.MoreTabContainer .VersionInfo .KakaoTalkInfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 0.5rem;
+  font-size: 0.8rem;
+}
+
+.MoreTabContainer .VersionInfo .KakaoTalkInfo img {
+  width: 1rem;
+  margin-right: 0.5rem;
+}
+
+.MoreTabContainer .VersionInfo .Version {
+  margin-right: 1rem;
+  font-size: 0.8rem;
+  color: #9a9a9a;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
