--- a/src/styles/_friend.scss
+++ b/src/styles/_friend.scss
@@ -132,27 +132,11 @@
       height: 3.4rem;
       padding: 0.2rem;
 
-      .AvatarWrapper {
-        @include flexCenter(row);
+      .Avatar {
         margin-left: 0.3rem;
         margin-right: 0.3rem;
-        height: 2.72rem;
-        width: 2.72rem;
-        background-color: $yellow;
+        height: 80%;
         border-radius: 40%;
-
-        .CH {
-          position: absolute;
-          margin-bottom: 2px;
-          color: $yellow;
-          font-size: 0.7rem;
-          z-index: 1;
-        }
-
-        .Avatar {
-          height: 50%;
-          filter: invert(0%);  
-        }
       }
 
       .Texts {
@@ -201,6 +185,7 @@
           }
   
           .StatMessage {
+            @include lineLimit(1);
             font-size: 0.7rem;
             color: $dimGray;
           }
@@ -213,9 +198,8 @@
           padding: 0.2rem; // 0.4rem;
 
           .Music {
-            color: $black;
+            @include lineLimit(1);
             font-size: 0.7rem;
-            @include textEllipse();
             color: $black;
           }
         }
