birthdayItem 일반화해서 ChannelItem이 커버하게 변경

--- a/src/styles/_friend.scss
+++ b/src/styles/_friend.scss
@@ -87,40 +87,9 @@
       border-top: 1px solid $dividerGray;
     }
 
-    .BirthdayItem {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;      
-      height: 3.4rem;
-      padding: 0.2rem;
-
-      .AvatarWrapper {
-        @include flexCenter(row);
-        margin-left: 0.3rem;
-        margin-right: 0.3rem;
-        height: 2.72rem;
-        width: 2.72rem;
-        background-color: $birthdayPink;
-        border-radius: 40%;
-
-        .Avatar {
-          height: 50%;
-          filter: invert(100%);
-        }
-      }
-
-      .Texts {
-        display: inline;
-        margin-left: 0.3rem;
-        color: $black;
-        font-weight: 700;
-        font-size: 0.8rem;
-
-        .NumBirthday {
-          color: $dimGray;
-          display: inline;
-        }
+    .BirthdayItem, .ChannelItem, .UserItem {
+      :hover {
+        background-color: $gray;
       }
     }
 
