--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -210,64 +210,8 @@
   border-top: 1px solid #f1f1f1;
 }
 
-.FriendTabContainer main .BirthdayItem {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 3.4rem;
-  padding: 0.2rem;
-}
-
-.FriendTabContainer main .BirthdayItem .AvatarWrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  margin-left: 0.3rem;
-  margin-right: 0.3rem;
-  height: 2.72rem;
-  width: 2.72rem;
-  background-color: #e1737a;
-  border-radius: 40%;
-}
-
-.FriendTabContainer main .BirthdayItem .AvatarWrapper .Avatar {
-  height: 50%;
-  -webkit-filter: invert(100%);
-          filter: invert(100%);
-}
-
-.FriendTabContainer main .BirthdayItem .Texts {
-  display: inline;
-  margin-left: 0.3rem;
-  color: #404040;
-  font-weight: 700;
-  font-size: 0.8rem;
-}
-
-.FriendTabContainer main .BirthdayItem .Texts .NumBirthday {
-  color: #c7c7c7;
-  display: inline;
+.FriendTabContainer main .BirthdayItem :hover, .FriendTabContainer main .ChannelItem :hover, .FriendTabContainer main .UserItem :hover {
+  background-color: #f7f7f7;
 }
 
 .FriendTabContainer main .ChannelItem {
