--- a/src/styles/_friend.scss
+++ b/src/styles/_friend.scss
@@ -87,12 +87,6 @@
       border-top: 1px solid $dividerGray;
     }
 
-    .BirthdayItem, .ChannelItem, .UserItem {
-      :hover {
-        background-color: $gray;
-      }
-    }
-
     .ChannelItem {
       display: flex;
       flex-direction: row;
@@ -101,10 +95,14 @@
       height: 3.4rem;
       padding: 0.2rem;
 
+      &:hover {
+        background-color: $gray;
+      }
+
       .Avatar {
         margin-left: 0.3rem;
         margin-right: 0.3rem;
-        height: 80%;
+        height: 2.8rem;
         border-radius: 40%;
       }
 
@@ -116,6 +114,7 @@
         font-size: 0.8rem;
 
         .NumChannel {
+          margin-left: 0.3rem;
           color: $dimGray;
           display: inline;
         }
@@ -130,10 +129,14 @@
       height: 3.4rem;
       padding: 0.2rem;
 
+      &:hover {
+        background-color: $gray;
+      }
+
       .Avatar {
         margin-left: 0.3rem;
         margin-right: 0.3rem;
-        height: 80%;
+        height: 2.8rem;
         border-radius: 40%;
       }
 
