--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -193,11 +193,11 @@
 
 .FriendTabContainer main {
   height: calc(100% - 5.3rem);
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 .FriendTabContainer main::-webkit-scrollbar {
-  width: 0.4rem;
+  width: 0.3rem;
 }
 
 .FriendTabContainer main::-webkit-scrollbar-track {
@@ -205,7 +205,7 @@
 }
 
 .FriendTabContainer main::-webkit-scrollbar-thumb {
-  border-radius: 3px;
+  border-radius: 0.09rem;
   background-color: #c7c7c7;
 }
 
@@ -479,7 +479,7 @@
 }
 
 .ChatTabContainer main.Chat::-webkit-scrollbar {
-  width: 0.4rem;
+  width: 0.3rem;
 }
 
 .ChatTabContainer main.Chat::-webkit-scrollbar-track {
@@ -487,7 +487,7 @@
 }
 
 .ChatTabContainer main.Chat::-webkit-scrollbar-thumb {
-  border-radius: 3px;
+  border-radius: 0.09rem;
   background-color: #c7c7c7;
 }
 
