--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -804,6 +804,52 @@
   color: #9a9a9a;
 }
 
+.ChatRoomContainer {
+  display: block;
+  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.ChatRoomContainer .Header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-app-region: drag;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 6rem;
+  background-color: azure;
+}
+
+.ChatRoomContainer main {
+  background-color: aquamarine;
+  height: calc(100% - 14.5rem);
+}
+
+.ChatRoomContainer .InputTools {
+  height: 2.5rem;
+  background-color: #f7f7f7;
+}
+
+.ChatRoomContainer .Input {
+  height: 6rem;
+  background-color: white;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
